--- a/3_Semantic-Textual-Similarity/2_Warming_Up/1.2.Computing_Sentence_Embeddings.ipynb
+++ b/3_Semantic-Textual-Similarity/2_Warming_Up/1.2.Computing_Sentence_Embeddings.ipynb
@@ -5,9 +5,11 @@
    "id": "c23209c1-3a95-4036-a5a5-d0c16e10f06b",
    "metadata": {},
    "source": [
-    "# [모듈] Coumputing Sentence Embeddings\n",
+    "# Warming Up - Coumputing Sentence Embeddings\n",
     "\n",
-    "### 참고\n",
+    "---\n",
+    "\n",
+    "## 참조\n",
     "- [Computing Sentence Embeddings](https://www.sbert.net/examples/applications/computing-embeddings/README.html)"
    ]
   },
@@ -17,6 +19,14 @@
    "metadata": {},
    "source": [
     "# 1. 배경"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eca7107-28bc-4411-aa28-5782ee0cfbf7",
+   "metadata": {},
+   "source": [
+    "Sentence Embedding 에 대한 여러 테크닉을 배우는 노트북 입니다."
    ]
   },
   {
@@ -188,7 +198,7 @@
       "\t- Avoid using `tokenizers` before the fork if possible\n",
       "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
       "Embeddings computed. Shape: (50000, 384)\n",
-      "CPU times: user 666 ms, sys: 414 ms, total: 1.08 s\n",
+      "CPU times: user 640 ms, sys: 338 ms, total: 978 ms\n",
       "Wall time: 14.6 s\n"
      ]
     }
@@ -231,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc8a71a596204af5b6519d40aba15484",
+       "model_id": "9f18a2e0b64f4da6a98df99e54e7f681",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfe89a3bba54458d811f8aebb4c3ccaa",
+       "model_id": "757471f86cbd429c95d6a8c0b18e636b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c042f85e77d45989561553dbcc7ebc7",
+       "model_id": "7f24d22d2a524955b05b75411ba731bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,7 +283,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56deea30cdcd4a83a1975858e83ef219",
+       "model_id": "601241dd7acc464d80a7579f9574edd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -287,7 +297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6025ed4a6b6f4dc886965247217e6465",
+       "model_id": "4f21ed00da0f4ca59f3848a67765f8e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -301,7 +311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1e8b7f5ef2649c488f11a9554a32f79",
+       "model_id": "139e83f8a4664f8e9a70776236d822b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -392,49 +402,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3bac55aa41248edba90974954a52c60",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/257k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8815258e92e486c9a2acee90f7e5f1b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/61.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ef55f8dbf27499cb69e1db6f8a0bbbd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/458 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a72ab2398f443cbb580b648af7d618a",
+       "model_id": "bf18ba0b192b4afc82198ef36befc200",
        "version_major": 2,
        "version_minor": 0
       },
@@ -449,7 +417,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at monologg/koelectra-small-v3-discriminator were not used when initializing ElectraModel: ['discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.bias', 'discriminator_predictions.dense.weight']\n",
+      "Some weights of the model checkpoint at monologg/koelectra-small-v3-discriminator were not used when initializing ElectraModel: ['discriminator_predictions.dense.weight', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense_prediction.bias', 'discriminator_predictions.dense.bias']\n",
       "- This IS expected if you are initializing ElectraModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing ElectraModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
