--- a/3_Semantic-Textual-Similarity/2_Warming_Up/1.3.Semantic_Textual_Similarity.ipynb
+++ b/3_Semantic-Textual-Similarity/2_Warming_Up/1.3.Semantic_Textual_Similarity.ipynb
@@ -5,9 +5,10 @@
    "id": "c23209c1-3a95-4036-a5a5-d0c16e10f06b",
    "metadata": {},
    "source": [
-    "# [모듈] Semantic Textual Similarity & Semantic Search\n",
+    "# Warming Up - Semantic Search & 이미지 서치\n",
     "\n",
-    "### 참고\n"
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -15,7 +16,9 @@
    "id": "13a9d4db-1c80-4978-ac93-2f8ca2f018be",
    "metadata": {},
    "source": [
-    "# 1. 배경"
+    "# 1. 배경\n",
+    "\n",
+    "Semantic Search 및 이미지 서치를 배웁니다."
    ]
   },
   {
@@ -328,7 +331,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6390666c8eb340aea1486a2786e88f63",
+       "model_id": "f40fb934511a4b0abc5f803f8c513a33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,7 +345,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "714d9416b0f44c199fb3096dc008b753",
+       "model_id": "fa409da1f9cf4da196b313525ca41d1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +359,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1faca47864104970817ae499eedc3fc4",
+       "model_id": "15817f7faaae4c338617334939655dad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -370,7 +373,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9de88cb05e604aaa8acb7e78f3a6f70e",
+       "model_id": "bb982e1df57048229275e1113c9c167c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f4378ab70ac4c02a2e29930d2243d15",
+       "model_id": "281dad4216274d898563646396d3f9bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,7 +401,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85f505991d9546ae81105e36cb4fc561",
+       "model_id": "6502c01a887b4c059fd6188dd85ed826",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,7 +415,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "917bc541537549f0ba7f664efb1656b7",
+       "model_id": "4155409e41d043528ac766f000155142",
        "version_major": 2,
        "version_minor": 0
       },
@@ -426,7 +429,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "990690a63a5546f08d2194c9795f315f",
+       "model_id": "88bf780318754be0a59e963dacb7b5a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -440,7 +443,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82530c9c390f441aaace08862986ee77",
+       "model_id": "716fecba55d64cf4808d0e6657901c54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -454,7 +457,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cbda8b3b4bc4807bad667ac7a984771",
+       "model_id": "2a393b8c74e546878a8a4b806f69bbb5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,7 +471,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0680777e4114790bb1cc94e29729c81",
+       "model_id": "81d21d0e1c1848b38b412f50904f0a4c",
        "version_major": 2,
        "version_minor": 0
       },
