--- a/3_Semantic-Textual-Similarity/2_Warming_Up/3.1.parallel_dask.ipynb
+++ b/3_Semantic-Textual-Similarity/2_Warming_Up/3.1.parallel_dask.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aa2e7de6-6c26-44aa-88a4-dea94805a133",
+   "id": "bf027826",
    "metadata": {},
    "source": [
+    "# Warming Up - DASK 병렬처리 프레임워크\n",
+    "\n",
+    "---\n",
+    "\n",
     "## 참고 자료\n",
     "\n",
     "[Welcome to the Dask Tutorial](https://tutorial.dask.org/00_overview.html)"
@@ -13,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eca7113d-6d40-419e-a5b0-84cd5ab8162d",
+   "id": "a7415b1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,21 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2193d014-4d74-473b-8a26-d185259e689f",
+   "execution_count": 2,
+   "id": "9233d692",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.8/site-packages/distributed/node.py:160: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 46333 instead\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dask import compute, delayed\n",
     "from dask.distributed import Client, progress\n",
@@ -55,26 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7cc9586a-fa6e-4eed-9661-4f84237a181e",
+   "execution_count": 3,
+   "id": "dbb36873",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Delayed('add-3fb3a652-cf13-46cd-bc3f-8ce628d25047'),\n",
-       " Delayed('add-d01e70e1-a81d-4121-9186-0318489b11ef'),\n",
-       " Delayed('add-d864b7f7-0db3-4a4e-a458-4b69c4ea0668'),\n",
-       " Delayed('add-5d457492-cd12-40ff-9842-4faea866ea9e'),\n",
-       " Delayed('add-b2ee3395-2d09-40ee-bdab-87cb1fbd3c45'),\n",
-       " Delayed('add-6fb2b699-267f-41f2-bba2-a4563aa5e8b3'),\n",
-       " Delayed('add-6fdb02a8-9cd3-4444-aa8a-8fa26b21d206'),\n",
-       " Delayed('add-f8fc3381-53b0-496f-976a-4b70f81bb49c'),\n",
-       " Delayed('add-7da07de9-448d-4d86-8d2e-5cb7868ce415'),\n",
-       " Delayed('add-de259ddd-1ae7-4a2d-a434-f57bf858dab7')]"
+       "[Delayed('add-058cf6fa-a532-46f8-991a-8179595c8ff6'),\n",
+       " Delayed('add-c673087a-83dc-42ff-b144-56d313d98461'),\n",
+       " Delayed('add-43857630-11df-4e36-9fb8-7656f3912698'),\n",
+       " Delayed('add-519a414e-236a-409a-9850-8ba4d6b8841c'),\n",
+       " Delayed('add-051328d3-dc31-4566-952e-fa0f10a05cad'),\n",
+       " Delayed('add-570297db-9fc3-4eed-ae1c-f9374723830b'),\n",
+       " Delayed('add-10cac7c6-1126-4bb6-a386-7115368f9810'),\n",
+       " Delayed('add-1b9e3518-95db-452d-b2d1-daa6c0ae41f6'),\n",
+       " Delayed('add-522b8662-fbb8-41ca-b2af-b6ff53119a89'),\n",
+       " Delayed('add-aec759e4-a390-48be-a84b-89c4da01d474')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0c4b6cca-9ad4-40c0-a23d-9206b0aa8cf1",
+   "execution_count": 4,
+   "id": "6cdc7cdd",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +96,7 @@
        "(0, 2, 4, 6, 8, 10, 12, 14, 16, 18)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85a98b98-c81f-4935-bd3f-f238ff3688c7",
+   "id": "5b3e4c7b",
    "metadata": {},
    "source": [
     "# DataFrame\n",
@@ -128,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "25d5fcf6-6a58-40b2-b097-114e69a7576f",
+   "execution_count": 5,
+   "id": "d023fd2a",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +131,7 @@
      "text": [
       "/home/ec2-user/anaconda3/envs/python3/lib/python3.8/site-packages/distributed/node.py:160: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 43073 instead\n",
+      "Hosting the HTTP server on port 34041 instead\n",
       "  warnings.warn(\n"
      ]
     },
@@ -149,7 +142,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-3bdc04f9-1980-11ed-b386-0e219226b6d7</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-38ca171d-1def-11ed-ae1d-12de4ab1831f</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -162,7 +155,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:43073/status\" target=\"_blank\">http://127.0.0.1:43073/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:34041/status\" target=\"_blank\">http://127.0.0.1:34041/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -178,11 +171,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">3535a007</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">d5c5f9fd</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:43073/status\" target=\"_blank\">http://127.0.0.1:43073/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:34041/status\" target=\"_blank\">http://127.0.0.1:34041/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 2\n",
@@ -190,10 +183,10 @@
        "            </tr>\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Total threads:</strong> 32\n",
+       "                    <strong>Total threads:</strong> 8\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Total memory:</strong> 239.87 GiB\n",
+       "                    <strong>Total memory:</strong> 59.85 GiB\n",
        "                </td>\n",
        "            </tr>\n",
        "            \n",
@@ -215,11 +208,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-82d36cd7-1a78-4ae1-a2d4-2e0a2a2e1e06</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-ab533448-a961-42e2-aefe-46a6d4460f34</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:35835\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:33283\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 2\n",
@@ -227,10 +220,10 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:43073/status\" target=\"_blank\">http://127.0.0.1:43073/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:34041/status\" target=\"_blank\">http://127.0.0.1:34041/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Total threads:</strong> 32\n",
+       "                        <strong>Total threads:</strong> 8\n",
        "                    </td>\n",
        "                </tr>\n",
        "                <tr>\n",
@@ -238,7 +231,7 @@
        "                        <strong>Started:</strong> Just now\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Total memory:</strong> 239.87 GiB\n",
+       "                        <strong>Total memory:</strong> 59.85 GiB\n",
        "                    </td>\n",
        "                </tr>\n",
        "            </table>\n",
@@ -261,29 +254,29 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:42573\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:35527\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Total threads: </strong> 16\n",
-       "                        </td>\n",
-       "                    </tr>\n",
-       "                    <tr>\n",
-       "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:43395/status\" target=\"_blank\">http://127.0.0.1:43395/status</a>\n",
-       "                        </td>\n",
-       "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Memory: </strong> 119.94 GiB\n",
+       "                            <strong>Total threads: </strong> 4\n",
        "                        </td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:39959\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:41029/status\" target=\"_blank\">http://127.0.0.1:41029/status</a>\n",
+       "                        </td>\n",
+       "                        <td style=\"text-align: left;\">\n",
+       "                            <strong>Memory: </strong> 29.93 GiB\n",
+       "                        </td>\n",
+       "                    </tr>\n",
+       "                    <tr>\n",
+       "                        <td style=\"text-align: left;\">\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:38665\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /home/ec2-user/SageMaker/NLP-HuggingFace-On-SageMaker/3_Semantic-Textual-Similarity/2_Warming_Up/dask-worker-space/worker-mtpp5btl\n",
+       "                            <strong>Local directory: </strong> /home/ec2-user/SageMaker/NLP-HuggingFace-On-SageMaker/3_Semantic-Textual-Similarity/2_Warming_Up/dask-worker-space/worker-22ca9bn4\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -315,29 +308,29 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:43299\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:43709\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Total threads: </strong> 16\n",
-       "                        </td>\n",
-       "                    </tr>\n",
-       "                    <tr>\n",
-       "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:33711/status\" target=\"_blank\">http://127.0.0.1:33711/status</a>\n",
-       "                        </td>\n",
-       "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Memory: </strong> 119.94 GiB\n",
+       "                            <strong>Total threads: </strong> 4\n",
        "                        </td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:37423\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:40247/status\" target=\"_blank\">http://127.0.0.1:40247/status</a>\n",
+       "                        </td>\n",
+       "                        <td style=\"text-align: left;\">\n",
+       "                            <strong>Memory: </strong> 29.93 GiB\n",
+       "                        </td>\n",
+       "                    </tr>\n",
+       "                    <tr>\n",
+       "                        <td style=\"text-align: left;\">\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:45937\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /home/ec2-user/SageMaker/NLP-HuggingFace-On-SageMaker/3_Semantic-Textual-Similarity/2_Warming_Up/dask-worker-space/worker-l6v2p0sx\n",
+       "                            <strong>Local directory: </strong> /home/ec2-user/SageMaker/NLP-HuggingFace-On-SageMaker/3_Semantic-Textual-Similarity/2_Warming_Up/dask-worker-space/worker-8_zqhhw4\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -373,10 +366,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:35835' processes=2 threads=32, memory=239.87 GiB>"
+       "<Client: 'tcp://127.0.0.1:33283' processes=2 threads=8, memory=59.85 GiB>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5e2e0cf6-5763-4556-b69d-d453ae7047d7",
+   "execution_count": 6,
+   "id": "e56119ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,8 +394,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "aab90a41-73c0-4e8f-a4a9-ac853dbc4ffe",
+   "execution_count": 7,
+   "id": "2983a483",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +460,7 @@
        "Dask Name: from_pandas, 2 tasks"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,8 +477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b631c5b9-1b78-494e-938c-0b0d144b0e8f",
+   "execution_count": 8,
+   "id": "4701ecd8",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +488,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,8 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3c5d9a97-1d51-45e5-8140-9145450071a3",
+   "execution_count": 9,
+   "id": "dd6f1b72",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +509,7 @@
        "6"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,8 +520,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "6d8e1182-fe9e-41f0-80f6-1d3cf0956585",
+   "execution_count": 10,
+   "id": "bbb7238e",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +594,7 @@
        "5     6       f"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,8 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c59086e5-e5dc-42cd-af4b-b020042d949d",
+   "execution_count": 11,
+   "id": "97e4ea42",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +621,7 @@
        "Name: letters, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "b6165f73-5561-4069-a2cc-55c0bf6cdeca",
+   "execution_count": 12,
+   "id": "bf91d61b",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +648,7 @@
        "Name: letters, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,8 +665,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "bec1ce87-b6ed-466f-bebe-9f3a19bf787b",
+   "execution_count": 13,
+   "id": "a1048abd",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +739,7 @@
        "5     6      ff"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,21 +751,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "213f6e07-99de-4a87-9b39-15ff9d119b14",
+   "execution_count": 14,
+   "id": "7f52c794",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.client - ERROR - Failed to reconnect to scheduler after 30.00 seconds, closing client\n",
-      "_GatheringFuture exception was never retrieved\n",
-      "future: <_GatheringFuture finished exception=CancelledError()>\n",
-      "asyncio.exceptions.CancelledError\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "client.shutdown()"
    ]
@@ -780,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff42e39b-d8ee-41ac-9bb4-fb8ff034d373",
+   "id": "430a5d1a",
    "metadata": {},
    "outputs": [],
    "source": []
