--- a/4_Multiple_Outputs_Model/3_Warming-Up-OneModel/1.1.Prepare_Data_NaverToxic.ipynb
+++ b/4_Multiple_Outputs_Model/3_Warming-Up-OneModel/1.1.Prepare_Data_NaverToxic.ipynb
@@ -1062,6 +1062,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17889, 167, 52, 391, 430)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\n",
+    "    tr_df['toxic'].sum() , \n",
+    "    tr_df['obscene'].sum(), \n",
+    "    tr_df['threat'].sum(),\n",
+    "    tr_df['insult'].sum(),    \n",
+    "    tr_df['identity_hate'].sum(),        \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1988, 16, 3, 27, 42)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\n",
+    "    te_df['toxic'].sum() , \n",
+    "    te_df['obscene'].sum(), \n",
+    "    te_df['threat'].sum(),\n",
+    "    te_df['insult'].sum(),    \n",
+    "    te_df['identity_hate'].sum(),        \n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
