change data path

--- a/4_Multiple_Outputs_Model/3_Warming-Up-OneModel/1.2.Prepare_Data_KaggleToxic.ipynb
+++ b/4_Multiple_Outputs_Model/3_Warming-Up-OneModel/1.2.Prepare_Data_KaggleToxic.ipynb
@@ -78,7 +78,7 @@
     }
    ],
    "source": [
-    "data_folder = '../data/kaggle_toxic_review'\n",
+    "data_folder = 'raw_data/kaggle_toxic_review'\n",
     "\n",
     "train_file = os.path.join(data_folder, \"train.csv\")\n",
     "test_file = os.path.join(data_folder, \"test.csv\")\n",
